# nyx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
bindings/python/: example.py  nyx_python.cpp
include/nyx/: version.hpp.in
include/nyx/core/: arch.hpp  bytes.hpp  error.hpp  logger.hpp  types.hpp
include/nyx/decompiler/: calling_convention.hpp  decompiler.hpp  function_detector.hpp  jump_table_detector.hpp  pseudo_c.hpp  type_inferer.hpp
include/nyx/lifter/: cfg.hpp  cfg_analysis.hpp  instruction_lifter.hpp  ir.hpp  region_builder.hpp  ssa_builder.hpp  ssa_optimizer.hpp
include/nyx/output/: annotated_writer.hpp  c_writer.hpp  dot_writer.hpp  json_writer.hpp  pseudo_c_writer.hpp  text_writer.hpp
include/nyx/parsers/: binary_parser.hpp  disassembler.hpp  dwarf_parser.hpp  elf_parser.hpp  macho_parser.hpp  pe_parser.hpp  wasm_lifter.hpp  wasm_parser.hpp
scripts/: regression_test.sh  verify.sh
src/: main.cpp
src/core/: arch.cpp  bytes.cpp  error.cpp  logger.cpp  version.cpp
src/decompiler/: calling_convention.cpp  decompiler.cpp  function_detector.cpp  jump_table_detector.cpp  pseudo_c.cpp  type_inferer.cpp
src/lifter/: cfg.cpp  cfg_analysis.cpp  instruction_lifter.cpp  ir.cpp  region_builder.cpp  ssa_builder.cpp  ssa_optimizer.cpp
src/output/: annotated_writer.cpp  c_writer.cpp  dot_writer.cpp  json_writer.cpp  pseudo_c_writer.cpp  text_writer.cpp
src/parsers/: binary_parser.cpp  disassembler.cpp  dwarf_parser.cpp  elf_parser.cpp  macho_parser.cpp  pe_parser.cpp  wasm_lifter.cpp  wasm_parser.cpp
tests/: main.cpp
tests/fixtures/: build.sh  gen_arm64_macho.py  gen_mips_elf.py  gen_pe.py  gen_ppc_elf.py  gen_wasm.py  sample.c
tests/integration/: test_cli.cpp  test_pipeline_arm64.cpp  test_pipeline_elf.cpp  test_pipeline_macho.cpp  test_pipeline_pe.cpp  test_v002_features.cpp  test_v003_features.cpp  test_v004_features.cpp  test_v005_features.cpp  test_v006_features.cpp
tests/unit/: test_annotated_writer.cpp  test_arch.cpp  test_arm32_lifter.cpp  test_arm64_lifter.cpp  test_bytes.cpp  test_c_writer.cpp  test_calling_convention.cpp  test_cfg.cpp  test_cfg_analysis.cpp  test_decompiler.cpp  test_disassembler.cpp  test_dot_writer.cpp  test_dwarf_parser.cpp  test_elf_parser.cpp  test_function_detector_v004.cpp  test_instruction_lifter.cpp  test_ir.cpp  test_json_writer.cpp  test_jump_table_detector.cpp  test_logger.cpp  test_macho_parser.cpp  test_mips_lifter.cpp  test_pe_parser.cpp  test_ppc_lifter.cpp  test_pseudo_c_writer.cpp  test_region_builder.cpp  test_ssa_builder.cpp  test_ssa_optimizer.cpp  test_text_writer.cpp  test_type_inferer.cpp  test_wasm_lifter.cpp  test_wasm_parser.cpp  test_x86_lifter.cpp
